--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-quarkus.kubernetes.deployment-target=openshift
+quarkus.kubernetes.deployment-target=knative
 quarkus.kubernetes.deploy=true
 quarkus.openshift.route.expose=true
+
+quarkus.container-image.registry=image-registry.openshift-image-registry.svc:5000
 
 quarkus.swagger-ui.always-include=true
